# ferrisdb

./: AUDIT_REPORT.md  Cargo.toml  LICENSE  README.md
crates/ferrisdb/: Cargo.toml
crates/ferrisdb-bench/: Cargo.toml
crates/ferrisdb-bench/src/: tpcc.rs
crates/ferrisdb-core/: Cargo.toml
crates/ferrisdb-core/src/: config.rs  lib.rs  log.rs  stats.rs
crates/ferrisdb-core/src/atomic/: mod.rs
crates/ferrisdb-core/src/error/: mod.rs
crates/ferrisdb-core/src/list/: dlist_shmem.rs  mod.rs
crates/ferrisdb-core/src/lock/: content_lock.rs  lwlock.rs  mod.rs  spinlock.rs  state_bits.rs
crates/ferrisdb-core/src/shmem/: layout.rs  mod.rs  offset.rs
crates/ferrisdb-core/src/thread/: mod.rs  thread_core.rs
crates/ferrisdb-core/src/types/: buf_id.rs  buffer_tag.rs  csn.rs  file_tag.rs  lsn.rs  mod.rs  page_id.rs  pdb_id.rs  snapshot.rs  xid.rs
crates/ferrisdb-core/src/waiter/: lwlock_waiter.rs  mod.rs
crates/ferrisdb-core/tests/: concurrency_tests.rs  coverage_lock_config_tests.rs
crates/ferrisdb-sql/: Cargo.toml
crates/ferrisdb-sql/src/: catalog.rs  lib.rs  main.rs  row_to_arrow.rs  server.rs  session.rs  table.rs
crates/ferrisdb-sql/test_files/: aggregate.slt  cte.slt  functions.slt  join.slt  select.slt  window.slt
crates/ferrisdb-sql/tests/: datafusion_integration.rs  sql_comprehensive_tests.rs  sql_crud_tests.rs  sqllogic_runner.rs
crates/ferrisdb-storage/: Cargo.toml
crates/ferrisdb-storage/src/: catalog.rs  control.rs  lib.rs  lob.rs  parallel_scan.rs  row_codec.rs  tablespace.rs
crates/ferrisdb-storage/src/buffer/: desc.rs  lru.rs  mod.rs  pool.rs  table.rs
crates/ferrisdb-storage/src/buffer/distributed/: mod.rs  page_directory.rs  page_owner.rs  read_node.rs  rpc.rs
crates/ferrisdb-storage/src/index/: btree.rs  mod.rs
crates/ferrisdb-storage/src/page/: header.rs  heap_page.rs  mod.rs
crates/ferrisdb-storage/src/smgr/: manager.rs  mod.rs
crates/ferrisdb-storage/src/wal/: archive.rs  buffer.rs  checkpoint.rs  mod.rs  parallel_redo.rs  reader.rs  record.rs  recovery.rs  ring_buffer.rs  writer.rs
crates/ferrisdb-storage/tests/: audit_fix_tests.rs  btree_advanced_tests.rs  btree_comprehensive_tests.rs  btree_full_coverage.rs  btree_tests.rs  buffer_advanced_tests.rs  buffer_full_coverage.rs  buffer_tests.rs  catalog_schema_tests.rs  coverage_boost_tests.rs  coverage_btree_deep_tests.rs  coverage_btree_page_tests.rs  coverage_btree_recovery_tests.rs  coverage_checkpoint_pool_tests.rs  coverage_pool_misc_tests.rs  coverage_recovery_deep_tests.rs  coverage_recovery_redo_tests.rs  coverage_serialization_tests.rs  coverage_wal_recovery_tests.rs  coverage_writer_config_tests.rs  crash_recovery.rs  fault_error_path_tests.rs  fault_injection_tests.rs  final_coverage.rs  last_five.rs  prod_storage_coverage.rs  production_hardening_tests.rs  robustness_tests.rs  segment_deep_tests.rs  smgr_tests.rs  wal_boundary_tests.rs  wal_comprehensive_tests.rs  wal_full_coverage.rs  wal_tests.rs
crates/ferrisdb-transaction/: Cargo.toml
crates/ferrisdb-transaction/src/: lib.rs  ssi.rs
crates/ferrisdb-transaction/src/heap/: mod.rs
crates/ferrisdb-transaction/src/lockmgr/: deadlock.rs  lock.rs  manager.rs  mod.rs
crates/ferrisdb-transaction/src/transaction/: mod.rs
crates/ferrisdb-transaction/src/undo/: mod.rs  record.rs  zone.rs
crates/ferrisdb-transaction/tests/: audit_fix_tests.rs  concurrent_heap_tests.rs  coverage_deep_heap_txn_tests.rs  coverage_heap_txn_tests.rs  coverage_txn_heap_extra_tests.rs  crash_recovery_e2e.rs  deep_coverage_tests.rs  heap_advanced_tests.rs  heap_extra_tests.rs  heap_full_coverage.rs  heap_integration.rs  phase2_hardening_tests.rs  prod_coverage_tests.rs  transaction_tests.rs  undo_comprehensive_tests.rs  wal_crash_recovery.rs
crates/ferrisdb/src/: engine.rs  lib.rs  managed_table.rs
crates/ferrisdb/tests/: advanced_features_tests.rs  coverage_engine_tests.rs  persistence_tests.rs  tablespace_wal_tests.rs
docs/: BTREE_FIX_ANALYSIS.md  BTREE_LOCK_COUPLING_DESIGN.md  MVP_PHASE1_COMPLETED.md  MVP_PHASE2_COMPLETED.md  MVP_PHASE3_COMPLETED.md  PERFORMANCE_COMPARISON.md  RUST_VS_CPP_COMPARISON.md  SINGLE_NODE_MVP_PLAN.md  SQL_CAPABILITY_HARDENING_PLAN.md  SQL_INTEGRATION_PLAN.md  UNDO_SPILL_DESIGN.md
scripts/: coverage.sh  coverage_prod.sh  sanitizer_check.sh
