[package]
name = "ferrisdb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "FerrisDB - High-performance transactional storage engine"

[dependencies]
ferrisdb-core = { path = "../ferrisdb-core" }
ferrisdb-storage = { path = "../ferrisdb-storage" }
ferrisdb-transaction = { path = "../ferrisdb-transaction" }

[dev-dependencies]
tempfile = "3"
